# tree-sitter-wasm-java

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-LICENSES  build.gradle.kts  settings.gradle.kts
rust/: Cargo.toml
rust/src/: extractor.rs  languages.rs  lib.rs  types.rs
src/main/java/dk/hjertmann/jwasm_tree_sitter/: ParsedFileResult.java  QueryCapture.java  QueryMatch.java  TreeSitterAnalyzer.java  TreeSitterQueryException.java  WasmSymbol.java  WasmSymbolType.java
src/test/java/dk/hjertmann/jwasm_tree_sitter/: FallbackBehaviorTest.java  JavaAnalysisTest.java  MultiLanguageAnalysisTest.java  QueryApiTest.java
src/test/resources/fixtures/: Sample.java  sample.cpp  sample.cs  sample.go  sample.js  sample.kt  sample.md  sample.py  sample.rb  sample.rs  sample.sh  sample.ts
